# nano-agent

./: .gitignore  README.md  main.py  pyproject.toml
agent/: core.py  llm.py  planner.py
data/: sample.csv
data/myenv/: pyvenv.cfg
frontend/: package.json  tailwind.config.js
frontend/app/: globals.css  page.tsx
frontend/components/: ChatInput.tsx  ChatMessage.tsx  Terminal.tsx
frontend/lib/: stream.ts
manager/: __init__.py  docker_manager.py  session.py  session_cleaner.py  session_manager.py
skills/data_analysis/: SKILL.md  prompt.txt  skill.py
tools/: functions.py  python_exec.py
